@@ -56,7 +56,21 @@ class CustomPagesAPIViewSet(PagesAPIViewSet):
     renderer_classes = [JSONRenderer]
     name = "pages"
 
-api_router.register_endpoint("pages", ProdPagesAPIViewSet)
+api_router.register_endpoint("pages", CustomPagesAPIViewSet)
+```
+
+Or changing the desired model to use for page results.
+
+```python
+from rest_framework.renderers import JSONRenderer
+
+# ...
+
+class PostPagesAPIViewSet(PagesAPIViewSet):
+    model = models.BlogPage
+    
+
+api_router.register_endpoint("posts", PostPagesAPIViewSet)
 ```
 
 Additionally, there is a base endpoint class you can use for adding different
