@@ -41,6 +41,7 @@ depth: 1
  * Add support for `placement` in `human_readable_date` the tooltip template tag (Rohit Sharma)
  * Add breadcrumbs to generic model views (Sage Abdullah)
  * Support passing extra context variables via the `{% component %}` tag (Matt Westcott)
+ * Allow subclasses of `PagesAPIViewSet` override default Page model via the `model` attribute (Neeraj Yetheendran, Herbert Poul)
 
 ### Bug fixes
 
